# form_service

./: .env.example  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml
form_app/src/: main.py
form_app/src/app/: application.py
form_app/src/repository/: __init__.py  fixtures.py  repository.py  settings.py
form_app/src/service/: __init__.py  form_service.py
