[tool.poetry]
name = "form_finder"
version = "0.1.0"
description = ""
authors = ["dvkuzmin <dk_187@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
pymongo = "^4.3.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
